--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,10 @@ workspace = 1, monitor:$mainMonitor, default:true
 workspace = 2, monitor:$mainMonitor
 workspace = r[3-5], monitor:$mainMonitor
 workspace = 6, monitor:$secondMonitor, default:true
-workspace = r[7-10], monitor:$secondMonitor
+workspace = 7, monitor:$secondMonitor
+workspace = 8, monitor:$secondMonitor, rounding:false, border:false
+workspace = 9, monitor:$secondMonitor
+workspace = 10, monitor:$secondMonitor
 
 
 ### MY PROGRAMS ###
@@ -37,6 +40,8 @@ exec-once = [workspace 6 silent] sleep 2; $music
 # focus back on workspace 1 rather than workspace 6 on monitor 2
 exec-once = sleep 2;  hyprctl dispatch workspace 1
 
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/keyring/ssh
+exec-once = /usr/bin/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 
 ### ENVIRONMENT VARIABLES ###
 
