--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -10,10 +10,11 @@ monitor = $secondMonitor, preferred, auto-left, 1
 
 workspace = 1, monitor:$mainMonitor, default:true
 workspace = 2, monitor:$mainMonitor
-workspace = r[3-5], monitor:$mainMonitor
+workspace = 3, monitor:$mainMonitor,rounding:false, border:false # gaming
+workspace = r[4-5], monitor:$mainMonitor
 workspace = 6, monitor:$secondMonitor, default:true
 workspace = 7, monitor:$secondMonitor
-workspace = 8, monitor:$secondMonitor, rounding:false, border:false
+workspace = 8, monitor:$secondMonitor
 workspace = 9, monitor:$secondMonitor
 workspace = 10, monitor:$secondMonitor
 
