--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,9 @@ set -g pane-base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
 
+set -ga update-environment "SSH_AUTH_SOCK"
+set-hook -g client-attached 'set-environment -g SSH_AUTH_SOCK "#{client_environment:SSH_AUTH_SOCK}"'
+
 set-option -sa terminal-features ',xterm-256color:RGB'
 
 # Vim
