minor tweaks to hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,12 +6,14 @@ $secondMonitor = HDMI-A-3
 
 monitor = $mainMonitor, highres@highrr, auto-right, 1
 monitor = $secondMonitor, preferred, auto-left, 1
-# monitor = $secondMonitor, disable
+#monitor = $secondMonitor, disable
+#monitor = $mainMonitor, disable
 
 workspace = 1, monitor:$mainMonitor, default:true
 workspace = 2, monitor:$mainMonitor
 workspace = 3, monitor:$mainMonitor,rounding:false, border:false # gaming
-workspace = r[4-5], monitor:$mainMonitor
+workspace = 4, monitor:$mainMonitor 
+workspace = 5, monitor:$mainMonitor 
 workspace = 6, monitor:$secondMonitor, default:true
 workspace = 7, monitor:$secondMonitor
 workspace = 8, monitor:$secondMonitor
@@ -53,7 +55,7 @@ env = HYPRCURSOR_SIZE,24
 
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 5
 
     border_size = 2
 
@@ -213,8 +215,8 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+#bind = $mainMod, mouse_down, workspace, e+1
+#bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
