Add battery to tray

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -24,6 +24,7 @@
         "hyprland/language",
         "clock",
         "tray",
+		"battery",
 		"custom/power"
     ],
      "hyprland/workspaces": {
