--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -54,12 +54,12 @@ env = HYPRCURSOR_SIZE,24
 ### LOOK AND FEEL ###
 
 general {
-    gaps_in = 5
-    gaps_out = 5
+    gaps_in = 3
+    gaps_out = 3
 
     border_size = 2
 
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border =  rgba(0087ff94)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -73,10 +73,9 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 20
-
+	rounding = 10
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.9
 
     shadow {
         enabled = true
@@ -95,7 +94,7 @@ decoration {
 }
 
 animations {
-    enabled = yes, please :)
+    enabled = yes
 
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
@@ -127,8 +126,8 @@ dwindle {
 }
 
 master {
-    new_status = master
-	orientation = right
+    new_status = slave
+	orientation = left
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
@@ -149,7 +148,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -178,11 +177,16 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, D, togglesplit, # dwindle
 
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, J, movewindow, d
+bind = $mainMod SHIFT, K, movewindow, u
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
-bind = $mainMod, j, movefocus, u
-bind = $mainMod, k, movefocus, d
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
