Better date/time formatting

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -75,6 +75,7 @@
         }
     },
     "clock": {
+		"format": "{:%d %h %Y %H:%M}",
         "timezone": "Australia/Melbourne",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%d-%m-%Y}"
