--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,7 +46,7 @@ set -g @dracula-plugins "weather cpu-usage ram-usage"
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon smiley
-set -g status-position top
+set -g status-position bottom
 
 # resurrect
 set -g @resurrect-capture-pane-contents 'on'  # Save pane contents
