Keybindings for mpc

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -39,6 +39,7 @@ exec-once = [workspace 2 silent] $notes
 exec-once = [workspace 1 silent] $browser 
 exec-once = [workspace 1 silent] sleep 1; $terminal  
 exec-once = [workspace 6 silent] sleep 2; $music
+exec-once = swaybg -i ~/Pictures/Wallpapers/pixel-art-3440x1440-v0-ko8utbyntngc1.webp
 
 # focus back on workspace 1 rather than workspace 6 on monitor 2
 exec-once = sleep 2;  hyprctl dispatch workspace 1
@@ -74,8 +75,8 @@ general {
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
 	rounding = 10
-    active_opacity = 1.0
-    inactive_opacity = 0.9
+    active_opacity = 0.85
+    inactive_opacity = 0.75
 
     shadow {
         enabled = true
@@ -234,11 +235,9 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+bind = $mainMod SHIFT, SPACE, exec, mpc toggle
+bind = $mainMod SHIFT, N, exec, mpc next
+bind = $mainMod SHIFT, P, exec, mpc prev
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
